--- a/first_project/users/templates/users/register.html
+++ b/first_project/users/templates/users/register.html
@@ -19,7 +19,7 @@
             <small class='text-muted'> 
                 Already have an account?
                 <a class = 'ml-2' href='{% url "login" %}'>
-                    Sign In
+                    Login 
                 </a>
             </small> 
         </div>
